--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </main>
 
 
-    <a href="../index2.html" id="game">NEXT</a>
+    <a href="./index2.html" id="game">NEXT</a>
     <script src="./script.js" type="module"></script>
 </body>
 </html>
